# crm-email

./: Dockerfile  README.md  docker-compose.yml  env.example  pyproject.toml  sonar-project.properties
crm/: main.py  metrics.py
crm/cache/: chat_cache.py
crm/configs/: collection_name_configs.py  constant.py  performance_config.py  redis_config.py
crm/core/: lifespan.py  settings.py
crm/dependencies/: auth.py
crm/models/: auth_models.py  create_resource_metadata.py  email_models.py  performance_models.py  process_request.py  rabbitmq_event_models.py  upload_resource_model.py
crm/prompts/: email_prompts.py  prompt_templates.py
crm/qdrant_db/: raft_state.json
crm/queues/: __init__.py  chat_worker.py
crm/rabbitmq/: consumers.py  producers.py  rabbitmq.py
crm/routers/: app_routes.py  auth.py  document_list_router.py  email_router.py  logger_router.py  query_store_router.py  upload_router.py
crm/services/: add_file_services.py  (+15 more)
docs/: CONTENT_BASED_CHUNKING_README.md  DEVELOPER_ONBOARDING.md  EMAIL_COMPOSER_README.md  OPENAI_SETUP.md  PARALLELIZATION_IMPROVEMENTS_REPORT.md  TABLE_AWARE_CHUNKING_README.md  TIKTOKEN_OPTIMIZATION_README.md
k8s/: deployment.yaml  service.yaml
qdrant_db/: meta.json  raft_state.json
scripts/: generate_email.py  run_pipeline.py  test_upload_and_compose.py
tests/: __init__.py  compare_chunking_methods.py  debug_table_regex.py  optimized_chunk_config.py  test_embedding_response.py  test_new_embedding_event.py  test_optimized_chunking.py  test_table_aware_chunking.py  test_table_aware_splitter.py  test_token_chunking.py
(+175 files in other folders)
